[gd_scene load_steps=7 format=2]

[ext_resource path="res://DialogBox/dialog-background.png" type="Texture" id=1]
[ext_resource path="res://DialogBox/Fonts/GaramondPremrPro-Smbd.otf" type="DynamicFontData" id=2]
[ext_resource path="res://DialogBox/next-indicator.png" type="Texture" id=3]
[ext_resource path="res://DialogBox/DialogBox.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 273.255, 97.804 ), Vector2( 273.255, 108.841 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="Control" parent="."]
anchor_left = 0.483
anchor_top = 1.0
anchor_right = 0.483
anchor_bottom = 1.0
margin_left = -175.754
margin_top = -139.839
margin_right = 163.246
margin_bottom = -22.8392
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.333333, 0.227451, 0.0862745, 1 )
bbcode_enabled = true
bbcode_text = "Hello there people from Youtube, This dialog is a placeholder. Hello world this is a long dialog? "
text = "Hello there people from Youtube, This dialog is a placeholder. Hello world this is a long dialog? "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next-indicator" type="Sprite" parent="DialogBox"]
position = Vector2( 293.255, 97.804 )
scale = Vector2( 0.304, 0.279 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox/next-indicator"]
autoplay = "IDLE"
anims/IDLE = SubResource( 2 )

[node name="Tween" type="Tween" parent="DialogBox"]

[node name="Button1" type="Button" parent="DialogBox"]
visible = false
margin_left = 152.413
margin_top = 15.0
margin_right = 164.413
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="DialogBox"]
visible = false
margin_left = 152.413
margin_top = 53.7549
margin_right = 164.413
margin_bottom = 73.7549
[connection signal="tween_completed" from="DialogBox/Tween" to="DialogBox" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="DialogBox/Button1" to="DialogBox" method="_on_Button1_pressed"]
[connection signal="pressed" from="DialogBox/Button2" to="DialogBox" method="_on_Button2_pressed"]
